Update requirements.txt with latest versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,37 @@
-# Core Framework
+# LangChain и LangGraph
+langchain==0.3.0
+langchain-community==0.3.0
+langchain-core==0.3.0
+langchain-anthropic==0.3.0
+langgraph==0.2.0
+
+# API клиенты
+openai==1.12.0
+anthropic==0.25.0
+requests==2.31.0
+
+# FastAPI
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+
+# Telegram Bot
 python-telegram-bot==20.7
+
+# Streamlit Dashboard
 streamlit==1.28.1
 plotly==5.18.0
-langgraph==0.0.20
-langchain==0.1.0
-langchain-core==0.1.0
-langchain-anthropic==0.1.0
-anthropic==0.18.1
 
-# Database
-psycopg2-binary==2.9.9
+# База данных
 sqlalchemy==2.0.23
-chromadb==0.4.18
-redis==5.0.1
+psycopg2-binary==2.9.9
 alembic==1.12.1
+
+# Vector DB
+chromadb==0.4.21
+
+# Redis
+redis==5.0.1
 
 # ML/Vision
 ultralytics==8.1.0
@@ -28,18 +44,18 @@ opencv-python==4.8.1.78
 sentence-transformers==2.2.2
 rank-bm25==0.2.2
 
-# Utilities
+# Утилиты
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
+aiohttp==3.9.1
 aiofiles==23.2.1
 httpx==0.25.2
-aiohttp==3.9.1
 websockets==12.0
+loguru==0.7.2
 
 # File Storage
 boto3==1.29.7
 
-# Monitoring & Logging
-loguru==0.7.2
-
+# Опционально (для локального запуска)
+ollama==0.1.25
