--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ langgraph==0.2.0
 openai==1.12.0
 anthropic==0.25.0
 requests==2.31.0
+langchain-openai==0.3.0  # Для OpenRouter/Together.ai
 
 # FastAPI
 fastapi==0.104.1
