--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ langchain-openai==0.3.0  # Для OpenRouter/Together.ai
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
+slowapi==0.1.9  # Rate limiting
 
 # Telegram Bot
 python-telegram-bot==20.7
@@ -61,6 +62,12 @@ loguru==0.7.2
 
 # File Storage
 boto3==1.29.7
+
+# Тестирование
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-mock>=3.12.0
+httpx>=0.25.2  # Для TestClient
 
 # Опционально (для локального запуска)
 # ollama>=0.1.0  # Раскомментируйте если нужен Ollama
